--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cd ./client && yarn build && cd ..",
-    "start": "conversation-api-function run . | bunyan",
+    "start:dev": "conversation-api-function run . | bunyan",
+    "start": "conversation-api-function run .",
     "postinstall": "cd ./client && yarn && cd .."
   },
   "author": "",
