--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "nexmo-client": "^9.1.3",
+    "@nexmoinc/voice-sdk": "^0.1.1-beta.22",
     "preact": "^10.10.1"
   },
   "devDependencies": {
