--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,16 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - main
+      - new-sdk
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
-jobs:
+jobs:  
   deploy:
       name: Deploy app
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: flyctl deploy --remote-only --build-secret WORK_NPM_TOKEN={{ secrets.WORK_NPM_TOKEN }}
+        - run: flyctl deploy --remote-only --build-secret npmrc={{ secrets.npmrc }}
