switch to runway.io

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,5 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
-        - uses: superfly/flyctl-actions/setup-flyctl@master
-        - run: flyctl deploy --remote-only --build-secret npmrc="{{ secrets.npmrc }}"
+        # - uses: superfly/flyctl-actions/setup-flyctl@master
+        # - run: flyctl deploy --remote-only --build-secret npmrc="{{ secrets.npmrc }}"
