--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.3.0",
+    "@types/node": "^18.7.21",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
